# iroh-room

./: .gitignore  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  PHASE-0-GO-NO-GO.md  PHASE-0-SPIKE.md  PRD.md  PRD.v0.3.md  PRODUCTION-READINESS.md  README.md  RELEASE-READINESS.md
crates/iroh-rooms/: CHANGELOG.md  Cargo.toml
crates/iroh-rooms-cli/: Cargo.toml
crates/iroh-rooms-cli/src/: agent.rs  audit.rs  cli.rs  clock.rs  display.rs  error.rs  file.rs  identity.rs  invite.rs  join.rs  main.rs  message.rs  paths.rs  pipe.rs  room.rs
crates/iroh-rooms-cli/tests/: agent_cli.rs  agent_e2e.rs  agent_invite_flow.rs  diagnostics_cli.rs  docs_conformance.rs  error_taxonomy.rs  error_taxonomy_e2e.rs  file_cli.rs  full_demo_e2e.rs  identity_cli.rs  invite_cli.rs  join_cli.rs  live_pipe_preview_docs.rs  message_cli.rs  no_direct_iroh_dep.rs  phase0_memo_conformance.rs  pipe_cli.rs  release_readiness_docs.rs  release_readiness_e2e.rs  room_cli.rs  tail_cli.rs  two_peer_e2e.rs
crates/iroh-rooms-core/: Cargo.toml
crates/iroh-rooms-core/src/: lib.rs  ticket.rs
crates/iroh-rooms-core/src/event/: binding.rs  cbor.rs  constants.rs  content.rs  file.rs  genesis.rs  ids.rs  invite.rs  join.rs  keys.rs  left.rs  message.rs  mod.rs  pipe.rs  reject.rs  removed.rs  signed.rs  status.rs  validate.rs  wire.rs
crates/iroh-rooms-core/src/membership/: access.rs  fold.rs  mod.rs  model.rs
crates/iroh-rooms-core/src/store/: error.rs  mod.rs  model.rs  schema.rs  tests.rs
crates/iroh-rooms-core/src/sync/: config.rs  engine.rs  engine_tests.rs  message.rs  mod.rs  sim.rs  transport.rs
crates/iroh-rooms-core/tests/: cbor_property.rs  compatibility.rs  e2e_lifecycle.rs  file_shared_hashes.rs  golden_vectors.rs  membership_fold.rs  membership_store_e2e.rs  protocol_conformance.rs  store_e2e.rs  sync_batch_dedup_e2e.rs  sync_convergence.rs  sync_restart.rs  sync_smoke.rs
crates/iroh-rooms-core/tests/conformance/: advisory.rs  docs_reference.rs  fixtures.rs  idempotency_ordering.rs  membership.rs  mod.rs  serialization.rs  taxonomy.rs
crates/iroh-rooms-net/: Cargo.toml  NOTES.md
crates/iroh-rooms-net/src/: admission.rs  alpn.rs  audit.rs  blob.rs  demo.rs  diag.rs  frame.rs  gossip.rs  handler.rs  lib.rs  manager.rs  node.rs  peer.rs  queue.rs  state.rs  transport.rs
crates/iroh-rooms-net/src/blob/: fetch.rs  mod.rs  serve.rs
crates/iroh-rooms-net/src/pipe/: alpn.rs  audit.rs  connector.rs  error.rs  gate.rs  handler.rs  hello.rs  mod.rs  owner.rs  registry.rs  runtime.rs  sessions.rs  splice.rs  watcher.rs
crates/iroh-rooms-net/tests/: approach_to_ceiling_e2e.rs  blob_e2e.rs  blob_import.rs  blob_import_live_e2e.rs  file_e2e.rs  frame.rs  join_e2e.rs  loopback.rs  malformed_cbor_e2e.rs  manager.rs  manager_e2e.rs  membership_projection_cache_e2e.rs  message_e2e.rs  pipe_e2e.rs  queue_budget_e2e.rs  room_events_e2e.rs
crates/iroh-rooms-v2-core/: Cargo.toml
crates/iroh-rooms-v2-core/src/: cbor.rs  domain.rs  error.rs  ids.rs  keys.rs  lib.rs  schema.rs  signed.rs
crates/iroh-rooms-v2-core/src/content/: body.rs  mod.rs  registry.rs  validate.rs
crates/iroh-rooms-v2-core/tests/: banned_dependencies.rs  governance_state_machine.rs  identifiers.rs  room_lifecycle.rs  signed_records_golden.rs  taxonomy.rs  v2_governance_log_e2e.rs  v2_identifiers_e2e.rs
crates/iroh-rooms/examples/: 01_identity.rs  02_create_room.rs  03_invite_and_join.rs  04_send_message.rs  05_share_and_fetch_file.rs  06_live_pipe.rs  07_agent_status.rs  offline_author_and_validate.rs
crates/iroh-rooms/src/: events.rs  files.rs  identity.rs  lib.rs  pipes.rs  room.rs
crates/iroh-rooms/tests/: example_agent_e2e.rs  experimental_surface.rs  facade_e2e.rs  iroh_pin_consistency.rs  stable_surface.rs  store_concurrency_e2e.rs
crates/spike-N40/: Cargo.toml  NOTES.md
crates/spike-N40/results/: 2026-07-22-gossip-matrix.json  README.md  results-gossip.md  results.md
crates/spike-N40/src/: cluster.rs  lib.rs  main.rs  metrics.rs  report.rs  rss.rs  workload.rs
crates/spike-N40/tests/: self_check.rs
crates/spike-blobs/: Cargo.toml  NOTES.md
crates/spike-blobs/src/: acl.rs  file_shared.rs  lib.rs  main.rs  net.rs
crates/spike-blobs/tests/: blob_acl.rs
crates/spike-nat/: Cargo.toml  NOTES.md
crates/spike-nat/results/: 2026-07-03-home-hetzner-AtoB-relay.json  2026-07-03-home-hetzner-AtoB-run4.json  2026-07-03-home-hetzner-AtoB-x2m-run1.json  2026-07-03-home-hetzner-AtoB-x2m-run2.json  2026-07-03-home-hetzner-AtoB-x2m-run3.json  2026-07-03-home-hetzner-BtoA-relay.json  2026-07-03-home-hetzner-BtoA-run2.json  2026-07-03-home-hetzner-BtoA-x512k-run1.json  2026-07-03-home-hetzner-BtoA-x512k-run2.json  2026-07-03-home-hetzner-BtoA-x512k-run3.json  2026-07-04-home-hetzner-AtoB-settle30-run1.json  2026-07-04-home-hetzner-AtoB-settle30-run2.json  2026-07-04-home-hetzner-AtoB-settle30-run3.json  2026-07-04-home-hetzner-BtoA-settle30-run1.json  2026-07-04-home-hetzner-BtoA-settle30-run2.json  2026-07-04-hotspot-hetzner-AtoB-relay.json  2026-07-04-hotspot-hetzner-AtoB-run1.json  2026-07-04-hotspot-hetzner-AtoB-run2.json  2026-07-04-hotspot-hetzner-AtoB-run3.json  2026-07-04-hotspot-hetzner-AtoB-settle30.json  2026-07-04-hotspot-hetzner-BtoA-relay.json  2026-07-04-hotspot-hetzner-BtoA-run1.json  2026-07-04-hotspot-hetzner-BtoA-run2.json  2026-07-04-hotspot-hetzner-BtoA-run3.json  2026-07-04-hotspot-home-AtoB-relay.json  2026-07-04-hotspot-home-AtoB-run1.json  2026-07-04-hotspot-home-AtoB-run2.json  2026-07-04-hotspot-home-AtoB-run3.json  2026-07-04-hotspot-home-AtoB-settle30.json  2026-07-07-local-demo1-AtoB-natural.json  2026-07-07-local-demo1-AtoB-relay.json  2026-07-07-local-demo1-BtoA-natural.json  2026-07-07-local-demo1-BtoA-relay.json  README.md  results.md
crates/spike-nat/src/: lib.rs  main.rs  probe.rs  report.rs
crates/spike-nat/tests/: self_check.rs
crates/spike-transport/: Cargo.toml  NOTES.md
crates/spike-transport/results/: README.md  results.md
crates/spike-transport/src/: gossip.rs  lib.rs  main.rs  mesh.rs  report.rs  workload.rs
crates/spike-transport/tests/: cluster.rs  self_check.rs
(+125 files in other folders)
