[workspace]
members = [
  "crates/iroh-rooms-core",
  "crates/iroh-rooms-cli",
  # The real full-mesh iroh QUIC event-transport adapter (IR-0005). A shipping
  # crate (the CLI will depend on it), unlike the throwaway spike below.
  "crates/iroh-rooms-net",
  # Throwaway spike (IR-0009): isolated from the shipping crates' dep tree.
  # Kept in the workspace so CI proves it builds (spec OQ-1, recommended option).
  "crates/spike-blobs",
  # Throwaway spike (IR-0012): the `nat-probe` Gate-A real-NAT hole-punching
  # measurement harness. Kept in the workspace so CI proves it builds and its
  # loopback self-check passes — but CI cannot prove NAT traversal (that is the
  # manual two-host run documented in `crates/spike-nat/NOTES.md`).
  "crates/spike-nat",
  # Throwaway spike (IR-0006): the `transport-probe` gossip-vs-full-mesh
  # transport comparison harness (Spike Plan Day 4). Kept in the workspace so
  # CI proves it builds and its loopback self-check passes — every claim it
  # measures is CI-reproducible (unlike spike-nat, this spike needs no real
  # network). See `crates/spike-transport/NOTES.md` for the decision memo.
  "crates/spike-transport",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kortiene/iroh-room"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

