[workspace]
members = [
  "crates/iroh-rooms-core",
  # The pure v2 cryptographic/deterministic-algorithm core (issue #140 / spec
  # `v2-crypto-core-crate.md`). A NEW crate, independent of `iroh-rooms-core`
  # (spec D1): canonical CBOR, BLAKE3/Ed25519 identifiers, governance state
  # machine, fork detection, sparse Merkle map. No network/store/async
  # dependencies; `publish = false` and unused pure infrastructure in this phase
  # (spec §12), so it stays compatible with the P-26/D-9 schema-evolution gate.
  "crates/iroh-rooms-v2-core",
  "crates/iroh-rooms-cli",
  # The real full-mesh iroh QUIC event-transport adapter (IR-0005). A shipping
  # crate (the CLI will depend on it), unlike the throwaway spike below.
  "crates/iroh-rooms-net",
  # The public Rust SDK façade (IR-0301): a curated, stability-tiered re-export
  # of `iroh-rooms-core`/`iroh-rooms-net`'s already-shipped surface. `publish =
  # false` for the Phase 2 developer preview; see crates/iroh-rooms/Cargo.toml.
  "crates/iroh-rooms",
  # Throwaway spike (IR-0009): isolated from the shipping crates' dep tree.
  # Kept in the workspace so CI proves it builds (spec OQ-1, recommended option).
  "crates/spike-blobs",
  # Throwaway spike (IR-0012): the `nat-probe` Gate-A real-NAT hole-punching
  # measurement harness. Kept in the workspace so CI proves it builds and its
  # loopback self-check passes — but CI cannot prove NAT traversal (that is the
  # manual two-host run documented in `crates/spike-nat/NOTES.md`).
  "crates/spike-nat",
  # Throwaway spike (IR-0006): the `transport-probe` gossip-vs-full-mesh
  # transport comparison harness (Spike Plan Day 4). Kept in the workspace so
  # CI proves it builds and its loopback self-check passes — every claim it
  # measures is CI-reproducible (unlike spike-nat, this spike needs no real
  # network). See `crates/spike-transport/NOTES.md` for the decision memo.
  "crates/spike-transport",
  # Throwaway spike (#145): the `n40-probe` loopback harness that measures
  # where the post-`b0622ec`-guardrail v1 full-mesh event transport breaks at
  # N=5/10/20/40 (RSS, task counts, queue-close cascade, rebind convergence).
  # Kept in the workspace so CI proves it builds and its N=5 loopback
  # self-check passes; the full N=40 matrix is a manual run committed as
  # `results/results.md`. The spike depends on the shipping crates but is not
  # a dependency of any of them and modifies no shipping code. See
  # `crates/spike-N40/NOTES.md` for the GO/NO-GO decision memo for #154.
  "crates/spike-N40",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kortiene/iroh-room"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

# `cargo test --workspace --all-targets --all-features` (scripts/verify.sh)
# links dozens of integration-test binaries, each statically pulling in the
# full iroh/quinn/rustls/tokio dependency tree. Full DWARF debug info made
# `target/debug` exceed the CI runner's disk budget, so the linker (lld) hit
# a SIGBUS mid-write on one of the later binaries. Line-tables-only debug
# info still gives file:line backtraces on test panics but cuts per-binary
# size dramatically, keeping the full workspace build inside CI's disk quota.
[profile.dev]
debug = "line-tables-only"

