[package]
name = "iroh-rooms-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "iroh-rooms"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# `store` compiles the SQLite `EventStore` into the binary so `room create` can
# persist the genesis `room.created` event (spec IR-0102 D2). The membership fold
# is always compiled (no feature), so `room members` needs nothing further.
iroh-rooms-core = { path = "../iroh-rooms-core", features = ["store"] }
# Argument parsing for the subcommand tree (PRD §16 CLI surface). `derive` gives
# the declarative `Cli`/subcommand structs. Caret 4.x; the exact patch is pinned
# in Cargo.lock. (CI builds on the latest stable toolchain — the landed crypto
# deps, e.g. `ed25519-dalek 3.0.0-rc.0`, already require rustc >= 1.85.)
clap = { version = "4", features = ["derive"] }
# Serialize the on-disk identity profile and the `identity show --json` output.
serde = { version = "1", features = ["derive"] }
# JSON codec for the on-disk `identity.json` and `--json` output (spec D4/D7).
serde_json = "1"
# Per-OS platform-default data directory (spec D3): XDG on Linux, Application
# Support on macOS, %APPDATA% on Windows.
directories = "5"
# Lowercase-hex encoding of the secret seeds written to `identity.secret`, and
# decoding them back in the secret loader (spec IR-0102 D4). Already in
# `Cargo.lock` (used by core).
hex = "0.4"
# OS CSPRNG for the 16-byte `room_nonce` that seeds the `room_id` derivation
# (spec IR-0102 D5). Same 0.4 line `core` already resolves; in `Cargo.lock`.
getrandom = "0.4"
# Wipe transient secret-bearing buffers/strings on drop (spec D8). Already in
# `Cargo.lock`.
zeroize = "1"
# Ergonomic error context for the binary's top-level `Err -> stderr` mapping.
# Already in `Cargo.lock`.
anyhow = "1"

[dev-dependencies]
# Spawn the built `iroh-rooms` binary and assert on stdout/stderr/exit code.
assert_cmd = "2"
# Output predicates (contains/matches) for the integration assertions.
predicates = "3"
# Per-test temp `IROH_ROOMS_HOME`. Already used by core's store tests.
tempfile = "3"
# Parse `identity show --json` output and `identity.secret` in integration tests.
serde_json = "1"

