[package]
name = "iroh-rooms-cli"
version = "0.1.0-rc.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "iroh-rooms"
path = "src/main.rs"

# MSRV note (spec IR-0105 D2 / OQ-1): adding `iroh-rooms-net` (and transitively the
# iroh 1.0 stack) raises this crate's *effective* MSRV above the workspace-declared
# `rust-version = 1.80`. The shipping crypto deps already forced rustc >= 1.85, so
# this only raises the declared floor, mirroring `iroh-rooms-net/Cargo.toml`.

[lints]
workspace = true

[dependencies]
# `sync` compiles the bounded recent-sync engine (and, transitively, the SQLite
# `EventStore` via `store`) into the binary: `room create`/`room members`/`room
# invite` persist and fold the log, while `room send`/`room tail` drive a live
# `SyncEngine` through `iroh-rooms-net` (spec IR-0105 D2). The membership fold is
# always compiled (no feature).
iroh-rooms-core = { path = "../iroh-rooms-core", features = ["sync"] }
# The shipping full-mesh QUIC event-transport carrier (IR-0005): `room send` and
# `room tail` bring up a `Node` over it to push/receive `message.text` frames
# (spec IR-0105 D2).
iroh-rooms-net = { path = "../iroh-rooms-net" }
# The public Rust SDK façade (IR-0301): the CLI is the SDK's reference consumer
# (spec AC2). The offline authoring path imports stable items through here
# instead of `iroh-rooms-core` directly; `experimental` is enabled so the
# façade's re-exports stay a strict superset of what the CLI already needs
# (see `docs/sdk-coverage.md`).
iroh-rooms = { path = "../iroh-rooms", features = ["experimental"] }
# Async runtime for the two online commands (`room send`, `room tail`). The offline
# commands stay synchronous; each online command enters a scoped runtime (D2).
# `signal` powers `room tail`'s Ctrl-C shutdown.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
# `SecretKey` / `EndpointId` / `EndpointAddr` types crossed at the CLI boundary
# when wiring the device key into the carrier and parsing `--peer` addresses
# come from `iroh_rooms::experimental::{session, blob, pipe_runtime}` (issue
# #87) — no direct `iroh` dependency needed; the façade's re-exports are the
# same type as `iroh-rooms-net`'s (same `=1.0.1` pin, kept in sync by hand).
# Argument parsing for the subcommand tree (PRD §16 CLI surface). `derive` gives
# the declarative `Cli`/subcommand structs. Caret 4.x; the exact patch is pinned
# in Cargo.lock. (CI builds on the latest stable toolchain — the landed crypto
# deps, e.g. `ed25519-dalek 3.0.0-rc.0`, already require rustc >= 1.85.)
clap = { version = "4", features = ["derive"] }
# Serialize the on-disk identity profile and the `identity show --json` output.
serde = { version = "1", features = ["derive"] }
# JSON codec for the on-disk `identity.json` and `--json` output (spec D4/D7).
serde_json = "1"
# Per-OS platform-default data directory (spec D3): XDG on Linux, Application
# Support on macOS, %APPDATA% on Windows.
directories = "5"
# Lowercase-hex encoding of the secret seeds written to `identity.secret`, and
# decoding them back in the secret loader (spec IR-0102 D4). Already in
# `Cargo.lock` (used by core).
hex = "0.4"
# OS CSPRNG for the 16-byte `room_nonce` that seeds the `room_id` derivation
# (spec IR-0102 D5). Same 0.4 line `core` already resolves; in `Cargo.lock`.
getrandom = "0.4"
# Wipe transient secret-bearing buffers/strings on drop (spec D8). Already in
# `Cargo.lock`.
zeroize = "1"
# Ergonomic error context for the binary's top-level `Err -> stderr` mapping.
# Already in `Cargo.lock`.
anyhow = "1"
# Independent BLAKE3-256 recompute for `file fetch`'s hash-mismatch diagnostic
# (IR-0204 spec §7). Same 1.x line `iroh-rooms-net`/core already resolve.
blake3 = "1"

[dev-dependencies]
# Spawn the built `iroh-rooms` binary and assert on stdout/stderr/exit code.
assert_cmd = "2"
# Output predicates (contains/matches) for the integration assertions.
predicates = "3"
# Per-test temp `IROH_ROOMS_HOME`. Already used by core's store tests.
tempfile = "3"
# Parse `identity show --json` output and `identity.secret` in integration tests.
serde_json = "1"
# Decode the `roomtkt1…` ticket token in CLI e2e tests that cross the
# CLI-output → ticket-codec boundary (AC2/AC4 from the invite-ticket spec).
iroh-rooms-core = { path = "../iroh-rooms-core", features = ["store"] }
# The two-peer integration suite (`tests/two_peer_e2e.rs`, IR-0109) runs an
# in-test loopback TCP echo target + client for the pipe tier. tokio is already a
# normal dependency of this crate, so this adds no new resolution — only the
# `net`/`io-util` features those in-test sockets need on top of the runtime.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
# Hex encoding/decoding used by the file_cli.rs hash-verification test. Already
# a resolved crate in Cargo.lock (used by core and net).
hex = "0.4"
