[package]
name = "iroh-rooms-core"
version = "0.1.0-rc.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
# The local SQLite event store (IR-0004). Off by default so validate-only
# consumers keep a lean dependency tree; enables the vendored `rusqlite`. CI runs
# `scripts/verify.sh` with `--all-features`, so the store is always fmt/clippy/test
# exercised (spec D1).
store = ["dep:rusqlite"]

# The deterministic, sans-IO bounded recent-sync engine + in-memory simulation
# harness (IR-0007). Enables `store` (the engine reconciles over the SQLite event
# store and membership fold). Off by default so validate-only consumers stay lean;
# CI `--all-features` always exercises it (spec `bounded-recent-sync-prototype.md`
# §2.3 / D1).
sync = ["store"]

[dependencies]
# Ed25519 signing/verification. Pinned EXACTLY to the version `iroh 1.0` resolves
# (`3.0.0-rc.0`, recorded in PHASE-0-SPIKE.md Event Protocol §1 / spec D2 / R6) so
# that `device_id` stays byte-for-byte the iroh `EndpointId` when the transport
# issue adds `iroh`. Ed25519 itself is RFC 8032, so the golden signature bytes are
# version-independent; the pin is about future type/byte compatibility.
ed25519-dalek = "=3.0.0-rc.0"
# BLAKE3-256 — the same content hash the Blob Plane uses (Event Protocol §4).
blake3 = "1"
# RFC 4648 base32 for the copy-paste invite ticket token (IR-0103 D4). Already
# resolves in the workspace `Cargo.lock` (pulled in transitively by the iroh
# ecosystem), so this direct dependency adds no new build artifact.
data-encoding = "2"
# Lowercase hex presentation of keys/ids on the wire (no `0x`, no uppercase).
hex = "0.4"
# OS CSPRNG entropy source for `SigningKey::generate()` (spec IR-0101 D1). Draws
# from the same operating-system RNG `ed25519-dalek`'s own `generate` uses, but
# keeps `generate()` parameter-free so the public surface is not coupled to an
# `ed25519-dalek`/`rand_core` version. Pinned to the workspace-resolved 0.4 line
# (already in `Cargo.lock`); its `fill` API is the entropy entry point.
getrandom = "0.4"
# Wipe the transient 32-byte seed buffer in `SigningKey::generate()` and the seed
# returned by `to_seed()` so secret material is zeroed on drop (spec IR-0101 D8).
# Already in `Cargo.lock`.
zeroize = "1"
# Synchronous SQLite for the local event store (IR-0004, spec D2). `bundled`
# compiles a hermetic, version-pinned SQLite from vendored C source — no system
# `libsqlite3`, reproducible CI. Its FFI lives in `libsqlite3-sys`, a separate
# crate, so the workspace `unsafe_code = "forbid"` lint (which targets our code) is
# unaffected. Optional + behind the `store` feature.
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

[dev-dependencies]
# Temporary directory / file creation for file-backed store e2e tests.
tempfile = "3"
# Property-based robustness/round-trip tests for the strict CBOR reader (risk
# R1, IR-0002 follow-up). Dev-only so validate-only consumers stay lean.
proptest = "1"
