# The real full-mesh iroh QUIC event-transport adapter (IR-0005). Unlike
# `spike-blobs` (a throwaway), this is the SHIPPING `crates/iroh-rooms-net` the
# README and the `SyncTransport` doc both name as the Room Event Plane carrier.
# It is the concrete `iroh_rooms_core::sync::SyncTransport` behind the landed,
# sans-IO `SyncEngine`. See `NOTES.md` for the spike findings (Gate-A status).
[package]
name = "iroh-rooms-net"
version = "0.1.0-rc.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Deliberately does NOT inherit `rust-version`: the iroh 1.0 stack has a higher
# MSRV than the workspace-declared `1.80`. The shipping crypto deps already force
# >= 1.85, so this raises only the *declared* floor, not the real one (spec OQ-1 /
# A5). Reconciling the workspace `rust-version` is tracked as a follow-up.
# Keep `publish` gated until the CLI (N1) wires the adapter into a runtime.
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
# Diagnostic-only build seam for controlled Gate-A relay verification. This is
# deliberately compile-time: ordinary SDK/application binaries cannot switch
# transport policy at runtime, and their default behavior remains unchanged.
relay-only-test = []
# The gossip overlay for `SyncMessage::Events` fan-out (issue #171 / #154 GO
# decision). When enabled, `Shared::route` broadcasts `Events` frames on a
# per-room `iroh-gossip` topic among admitted device keys instead of the
# per-peer queue fan-out; the connection-level admission gate
# (`GossipProtocolHandler`) still rejects unadmitted devices before any gossip
# byte is exchanged (reject-before-bytes preserved, spec §4 D2). Default off:
# direct net consumers keep the N≤5 full-mesh path and core cap. Enabling this
# feature also enables `iroh-rooms-core/large_rooms`, so the 40-member cap is
# paired with the bounded gossip topology. Rollback = flip the flag; the
# pure-mesh `route` branch and cap=5 compile back in.
gossip_overlay = ["dep:iroh-gossip", "iroh-rooms-core/large_rooms"]

[lints]
workspace = true            # inherits `unsafe_code = "forbid"` (our code only;
                            # iroh's internal unsafe lives in its dependencies).

[[bin]]
name = "net-smoke"
path = "src/bin/net_smoke.rs"

[dependencies]
# `sync` transitively enables `store`, so `SyncEngine` + `EventStore` are both
# available to the driver/binary from this single feature.
iroh-rooms-core = { path = "../iroh-rooms-core", features = ["sync"] }
# Same pin proven by `spike-blobs` (crates.io index 2026-06-29). Only the iroh 1.0
# stable core (`Endpoint`/`Router`/`ProtocolHandler`/`Connection`/`EndpointId`) is
# used — zero 0.x crates on the event critical path (ADR-1 churn argument / D5).
# Cross-referenced pin (issue #87 D6/OQ2, deferred the `[workspace.dependencies]`
# hoist): `crates/iroh-rooms/Cargo.toml`'s optional `iroh` dep MUST stay byte-
# identical to this pin, or its re-exported `EndpointAddr`/`EndpointId`/
# `SecretKey` become a different type from this crate's.
iroh = "=1.0.1"
# The Blob Plane's durable local store (IR-0202). The exact pin `spike-blobs`
# confirmed against the crates.io index (NOTES.md §1); it resolves `iroh ^1.0`
# (1.0.1), matching the pin above — no new iroh-version divergence. The default
# `fs-store` feature provides the persistent `store::fs::FsStore` used by
# `crate::blob::BlobStore`. Only the local producer/import half is wired here; the
# serve ALPN + two-gate ACL (spike `src/net.rs`) is the follow-up serve/fetch issue.
iroh-blobs = "=0.103.0"
# Independent BLAKE3-256 recompute cross-checked against the store's own import
# hash (spike NOTES.md §4 belt-and-suspenders — an internal-bug guard). Same 1.x
# line `iroh-rooms-core` already resolves.
blake3 = "1"
# The verified-fetch client's return type (`iroh_blobs::get`'s buffered getter
# yields `bytes::Bytes`, spike NOTES.md §4). Already resolved transitively via
# `iroh-blobs`; named explicitly since `net::blob::fetch` is a public boundary.
bytes = "1"
# Stream `iroh-blobs`' verified Bao leaves instead of calling its unbounded
# `GetBlobResult::bytes()` collector. Exact pins match `iroh-blobs = 0.103.0`'s
# resolved graph so this adds no second protocol/runtime implementation.
bao-tree = "=0.16.0"
n0-future = "=0.3.2"
# `net` adds `TcpStream`/`TcpListener` for the Live Pipe Plane's loopback
# forwarding splice (IR-0010); `signal` lets the CLI publish `pipe.closed` on
# Ctrl-C (owner-exit). No new external crate — only extra tokio features.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net", "signal", "io-util"] }
anyhow = "1"               # binary/edge error context only
# Lowercase-hex rendering of blob hashes in `BlobError` diagnostics only. Same 0.4
# line `iroh-rooms-core` already resolves; in `Cargo.lock`.
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# The gossip overlay for `Events` fan-out (issue #171 / spec §4 D1). The exact
# pin `crates/spike-transport` reconciled against `iroh = "=1.0.1"` with zero
# API drift (spike-transport/NOTES.md §1). Optional: enabled by the
# `gossip_overlay` feature so the default build stays on the full-mesh path
# the v1 spike measured. See `src/gossip.rs` for the integration notes.
iroh-gossip = { version = "=0.101.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
# Per-test temp directory rooting the durable blob store in `blob.rs` unit tests.
tempfile = "3"
